<resources>
    <string name="app_name">StudentManager</string>
    <string name="action_settings">Settings</string>
    <string name="danhsachsv">DANH SÁCH SINH VIÊN</string>
    <string name="themsv">THÊM SINH VIÊN</string>
    <string name="themlop">THÊM LỚP</string>
    <string name="update_student">CẬP NHẬT SINH VIÊN</string>
    <string name="masv">Mã SV</string>
    <string name="ma_sv">Mã SV:</string>
    <string name="tensv">Tên SV</string>
    <string name="ten_sv">Tên SV:</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="gt">GT</string>
    <string name="gioitinh">Giới tính:</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="ngay_sinh">Ngày sinh:</string>
    <string name="xoa_trang">XÓA TRẮNG</string>
    <string name="luu_sv">LƯU SINH VIÊN</string>
    <string name="saved">Đã lưu</string>
    <string name="error">Lỗi!</string>
    <string name="updated">Đã cập nhật</string>
    <string name="student_exists">Mã SV đã tồn tại</string>
    <string name="delete">Xóa</string>
    <string name="deleted">Đã xóa</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="delete_message">Xóa đối tượng</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search">Tìm kiếm</string>
    <string name="danhsachlop">DANH SÁCH LỚP</string>
    <string name="malop">Mã lớp</string>
    <string name="tenlop">Tên lớp</string>
    <string name="giobatdau">Thời gian bắt đầu</string>
    <string name="gioketthuc">Thời gian kết thúc</string>
    <string name="thoigian">Thời gian</string>
    <string name="phonghoc">Phòng học</string>
    <string name="tongsosv">Tồng SV</string>
    <string name="luulop">LƯU LỚP HỌC</string>
    <string name="update_class">CẬP NHẬT LỚP HỌC</string>
    <string name="class_exits">Mã lớp học đã tồn tại</string>
    <string name="soluong">SL: </string>

    <string name="menu_home">Home</string>
    <string name="home_second">Home Second</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="quanlylop">Quản lý lớp</string>
    <string name="menu_call">Call</string>
    <string name="menu_sendMess">Send Message</string>
    <string name="menu_sendMail">Send Email</string>
    <string name="goidienchohs">Gọi điện</string>
    <string name="thongbaonghi">Thông báo nghỉ học</string>
    <string name="nhantinchohs">Nhắn tin</string>
    <string name="emailToStudent">Gửi mail cho cả lớp</string>
    <string name="sodienthoai">Số điện thoại:</string>
    <string name="email">Email:</string>
    <string name="telephony_not_enabled">Điện thoại không khả dụng</string>
    <string name="failure_permission">Truy cập bị từ chối</string>
    <string name="phone_status">tình trạng điện thoại</string>
    <string name="ringing">Đang đổ chuông...</string>
    <string name="offhook">Đang kết nối</string>
    <string name="idle">Đang bận</string>
    <string name="thong_bao">Thông báo</string>
</resources>
