<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditClassManager"
    tools:showIn="@layout/activity_edit_class_manager">

    <TextView
        android:id="@+id/tvTitleClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_horizontal_padding"
        android:text="@string/themlop"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorBlue" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleClass"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/malop" />

            <EditText
                android:id="@+id/etIDClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:ems="10" >
            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/tenlop" />

            <EditText
                android:id="@+id/etNameClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giobatdau"
                android:textColor="@color/colorWhite"
                android:paddingTop="@dimen/activity_horizontal_padding"/>



            <EditText
                android:id="@+id/etStart"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"

                android:focusable="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Choose the time"
                android:textColorHint="@color/colorWhite" />



        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioketthuc"
                android:textColor="@color/colorWhite"
                android:paddingTop="@dimen/activity_horizontal_padding"/>


            <EditText
                android:id="@+id/etEnd"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:focusable="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Choose the time"
                android:textColorHint="@color/colorWhite" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/phonghoc"
                android:paddingTop="@dimen/activity_horizontal_padding"/>

            <EditText
                android:id="@+id/etClassRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:ems="10" >
            </EditText>
        </TableRow>

<!--        <TableRow-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" >-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/colorWhite"-->
<!--                android:text="@string/tongsosv"-->
<!--                android:paddingTop="@dimen/activity_horizontal_padding"/>-->

<!--            <EditText-->
<!--                android:id="@+id/etClassTotal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:textColor="@color/colorWhite"-->
<!--                android:ems="10" >-->
<!--            </EditText>-->
<!--        </TableRow>-->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_horizontal_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btnClear"
                    android:background="@color/colorAzure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:onClick="clear"
                    android:text="@string/xoa_trang"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="@dimen/activity_horizontal_padding"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAzure"
                android:onClick="save"
                android:text="@string/luulop" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_horizontal_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btnThongBao"
                    android:background="@color/colorAzure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:onClick="navigateToEmail"
                    android:text="@string/thong_bao"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="@dimen/activity_horizontal_padding"
                    android:layout_height="wrap_content" />
            </LinearLayout>



        </TableRow>
    </TableLayout>

</RelativeLayout>